<resources>
    <string name="app_name">充电加速器</string>
    <string name="umeng_appkey">527380a356240b90511da762</string>

    <string name="tab_charge">充电</string>
    <string name="tab_recover">修复</string>
    <string name="tab_discovery">发现</string>
    <string name="tab_hot">热点</string>
    <string name="setting">设置</string>
    <string name="feedback">意见反馈</string>

    <string name="charge_title">充电加速</string>
    <string name="recover_title">电池修复</string>
    <string name="charge_optimize">耗电优化</string>
    <string name="recover_optimize">立即修复</string>
    <string name="recover_energy">电量</string>
    <string name="recover_tem">温度</string>
    <string name="recover_voltage">电压</string>
    <string name="recover_status">状态</string>

    <string name="setting_title">设置</string>
    <string name="power_optimize_title">耗电优化</string>
    <string name="power_optimize_dsc">个应用程序在偷偷耗电（点击列表中的图片可避免被清理）</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">松开开始刷新</string>
    <string name="listview_header_last_time">上次更新：</string>
    <string name="refreshing">刷新中...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_loading">正在加载更多...</string>
    <string name="nomore_loading">没有更多了</string>

    <string name="set_wallpaper">设置壁纸</string>
    <string name="download_girl_picture">下载</string>

    <string name="power_optimize">立即省电</string>
    <string name="power_optimize_finish">优化完成</string>
    <string name="power_optimize_finish_dsc">已延长用时</string>


    <string name="charge_btn_consumer">耗电优化</string>
    <string name="charge_btn_open_accelerate">开启充电加速</string>
    <string name="charge_btn_accelerate_stop">停止充电加速</string>
    <string name="charge_btn_accelerate1">充电加速中.</string>
    <string name="charge_btn_accelerate2">充电加速中..</string>
    <string name="charge_btn_accelerate3">充电加速中...</string>
    <string name="charge_btn_opening">加速开启中...</string>
    <string name="charge_btn_closing">加速关闭中...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
