<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hodanet.charge.fragment.RecoverFragment">


    <!-- title-->
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:background="@color/bg_main_color"
        android:layout_height="55dp">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="23sp"
            android:text="@string/recover_title"/>

    </RelativeLayout>


    <ScrollView
        android:layout_below="@id/rl_title"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:background="@mipmap/recover_bg_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/ll_content"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="400dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <RelativeLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="245dp"
                            android:layout_height="135dp">
                            <com.hodanet.charge.view.BatteryHorizontalView
                                android:id="@+id/battery"
                                android:layout_centerInParent="true"
                                android:layout_width="225dp"
                                android:layout_height="115dp"
                                android:background="@mipmap/charge_battery"/>

                            <com.hodanet.charge.view.RecoverRotateView
                                android:id="@+id/battery_rotate"
                                android:layout_marginRight="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </RelativeLayout>



                        <TextView
                            android:id="@+id/tv_score"
                            android:visibility="invisible"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="35sp"
                            android:text="30"/>

                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_charge_btn"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/charge_btn"
                    android:textSize="20sp"
                    android:layout_width="185dp"
                    android:layout_height="48dp"
                    android:text="@string/recover_optimize"
                    android:gravity="center"
                    android:background="@drawable/charge_btn"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:textColor="@color/charge_remain"
                            android:text="@string/recover_energy"
                            android:textSize="18sp"/>

                        <RelativeLayout
                            android:layout_marginTop="3dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp">

                            <TextView
                                android:id="@+id/tv_percent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:textColor="@color/charge_remain"
                                android:textSize="16sp"
                                android:text="--"/>

                            <ImageView
                                android:id="@+id/img_circle_percent"
                                android:padding="3dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@mipmap/recover_circle"/>
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:textColor="@color/charge_remain"
                            android:text="@string/recover_tem"
                            android:textSize="18sp"/>

                        <RelativeLayout
                            android:layout_marginTop="3dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp">

                            <TextView
                                android:id="@+id/tv_temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:textColor="@color/charge_remain"
                                android:textSize="16sp"
                                android:text="--"/>

                            <ImageView
                                android:id="@+id/img_circle_temp"
                                android:padding="3dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@mipmap/recover_circle"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true" />
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:textColor="@color/charge_remain"
                            android:text="@string/recover_voltage"
                            android:textSize="18sp"/>

                        <RelativeLayout
                            android:layout_marginTop="3dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp">

                            <TextView
                                android:id="@+id/tv_voltage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:textColor="@color/charge_remain"
                                android:textSize="16sp"
                                android:text="--"/>

                            <ImageView
                                android:id="@+id/img_circle_voltage"
                                android:padding="3dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@mipmap/recover_circle"/>
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:textColor="@color/charge_remain"
                            android:text="@string/recover_status"
                            android:textSize="18sp"/>

                        <RelativeLayout
                            android:layout_marginTop="3dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp">

                            <TextView
                                android:id="@+id/tv_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:textColor="@color/charge_remain"
                                android:textSize="16sp"
                                android:text="--"/>

                            <ImageView
                                android:id="@+id/img_circle_status"
                                android:padding="3dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@mipmap/recover_circle"/>
                        </RelativeLayout>

                    </LinearLayout>



                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"/>




            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_recommend"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"/>



        </LinearLayout>








    </ScrollView>








</RelativeLayout>
